# dim

./: .Dockerignore  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.in  requirements.txt  update_deps
.circleci/: config.yml
dim/: app.py  bigquery_client.py  cli.py  config_parser.py  const.py  error.py  slack.py  test_config.yml  test_run.py  utils.py
dim/models/: dim_config.py
dim/models/dim_check_type/: __init__.py  base.py  column_length.py  column_sum_not_zero.py  combined_column_uniqueness.py  compare_row_count_to_table.py  custom_compare_metrics.py  custom_sql_metric.py  matches_regex.py  not_null.py  numeric_values_matches.py  previous_count_avg_within_expected_delta.py  table_row_count.py  template.py  uniqueness.py  value_in_set.py
dim/models/dim_check_type/templates/: column_length.sql.jinja  column_sum_not_zero.sql.jinja  combined_column_uniqueness.sql.jinja  compare_row_count_to_table.sql.jinja  custom_compare_metrics.sql.jinja  custom_sql_metric.sql.jinja  matches_regex.sql.jinja  not_null.sql.jinja  numeric_values_matches.sql.jinja  previous_count_avg_within_expected_delta.sql.jinja  table_row_count.sql.jinja  template.sql.jinja  uniqueness.sql.jinja  value_in_set.sql.jinja
dim/models/dq_checks/: __init__.py  base.py  column_length.py  custom_sql_metric.py  custom_sql_metrics.py  length_of_column.py  not_null.py  table_row_count.py  template.py  uniqueness.py  value_in_set.py
dim/models/dq_checks/templates/: column_length.sql.jinja  custom_sql.sql.jinja  custom_sql_metric.sql.jinja  length_of_column.sql.jinja  not_null.sql.jinja  table_row_count.sql.jinja  template.sql.jinja  uniqueness.sql.jinja  value_in_set.sql.jinja
dim/models/tests/: base.py  custom_sql_metrics.py  not_null.py  table_row_count.py  uniqueness.py
dim/models/tests/templates/: not_null.sql.jinja  table_row_count.sql.jinja  uniqueness.sql.jinja
docs/: dim_config_structure.md  dim_test_types.md
docs/guides/: adding_a_new_dim_test_type.md
requirements/: dev-requirements.in  dev-requirements.txt  requirements.in  requirements.txt
tests/: test_not_null.py
tests/cli/: test_cli.py
tests/cli/test_configs/: missing_dim_config_key.yaml  missing_tier.yaml  valid.yaml
tests/dim_checks/test_column_length/: test_column_length.py
tests/dim_checks/test_combined_column_uniqueness/: test_combined_column_uniqueness.py
tests/dim_checks/test_compare_row_count_to_table/: test_compare_row_count_to_table.py
tests/dim_checks/test_custom_sql/: test_custom_sql.py
tests/dim_checks/test_matches_regex/: test_matches_regex.py
tests/dim_checks/test_not_null/: test_not_null.py
tests/dim_checks/test_numeric_values_matches/: test_numeric_values_matches.py
tests/dim_checks/test_table_row_count/: test_table_row_count.py
tests/dim_checks/test_uniqueness/: test_uniqueness.py
tests/dim_checks/test_value_in_set/: test_value_in_set.py
tests/test_not_null/: not_null.yml  test_not_null.py  test_not_null_pass.py
tests/test_uniqueness/: test_uniqueness.py
views/: dim_muted_alerts.sql  dim_run_processing_info.sql
(+26 files in other folders)
