[project]
name="dim"
version = "0.1.0"
description="Data Integrity Monitoring"
authors = [
    {name = "Alekhya Kommasani", email="akommasani@mozilla.com"},
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    'pandas>=1.5.0',
    "click==8.1.2",
    "pyyaml==6.0",
    "Jinja2==3.1.2",
    'google-cloud-bigquery>=3.3.2',
    'slack_sdk>=3.18.3',
    'db-dtypes>=1.0.4',
    'tabulate==0.9.0'

]

[project.optional-dependencies]
testing = [
  "pytest>=7.1.3",
  "pytest-cov[all]", 
  "black>=22.8.0",
  "isort>=5.10.1",
  "flake8>=5.0.4",
]


[project.urls]
repository = "https://github.com/mozilla/dim"

[project.scripts]
dim = "dim.cli:cli"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["dim"]
